--- a/mangano-portfolio/style.css
+++ b/mangano-portfolio/style.css
@@ -7,7 +7,6 @@ canvas {
 :root {
   --dark-bg: rgba(15, 15, 15, 0.95);
   --spacing: 350px;
-
   font-family: brandon-grotesque, sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -15,77 +14,70 @@ canvas {
 
 
 main {
+  width: 100vw;
   color: white;
   z-index: 99;
   position: absolute;
   margin: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-right: 100px;
-}
-
-@font-face {
-  font-family: "Montserrat-Bold";
-  src: url("/fonts/Montserrat/static/Montserrat-Bold.ttf");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Montserrat-Regular";
-  src: url("/fonts/Montserrat/static/Montserrat-Regular.ttf");
-  font-weight: 500;
-  font-style: normal;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
 }
 
 h1, h2, h3, h4 blockquote {
-  font-family: "Montserrat-Bold";
-  font-weight: 700;
+  font-family: elevon, sans-serif;
+  font-weight: 500;
   font-style: normal;
+
 }
 
 header {
   background: var(--dark-bg);
-  grid-column: 2 / span 5;
+  grid-column: 1 / span 10;
   font-size: 2.5rem;
   padding: 2rem;
   margin-bottom: 10%;
-  font-family: Montserrat-Regular;
+  font-family: sans-serif;
 }
 
 section {
-  width: 80%;
+  width: 92.5%;
   padding: 1rem;
   background-color:rgba(0, 0, 0, 0.5);
   font-size: 1.25rem;
   line-height: 1.5;
-  font-family: "Montserrat-Regular";
+  font-family: sans-serif;
   margin-bottom: 10%;
+  grid-column: 1 / span 12;
 }
 
 blockquote {
   margin: 0;
   padding: 0;
+  display: inline;
   margin-bottom: 10%;
-  font-family: "Montserrat-Bold";
+  font-family: Roboto, sans-serif;
+  width: 92.5%;
+  grid-column: 1 / span 12;
 }
 
 blockquote p {
   color: black;
   background-color: white;
   font-size: 3rem;
-  font-family: Montserrat-Bold;
-  margin-left: 15%;
-  margin-right: 15%;
+  font-family: "Roboto", sans-serif;
+  font-weight: bolder;
   padding: 10px;
+  width: 100%;
+  grid-column: 1 / 12;
 }
 
 
 .skills {
-  width: 80%;
+  grid-column: 1 / 13;
+  width: 92.5%;
   display: flex;
   flex-direction: row;
-  align: flex-start;
+  align-items: flex-start;
 }
+
+
